consume all Process streams